--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@types/react": "16.8.19",
     "@types/react-dom": "16.8.4",
     "@types/react-redux": "^7.0.9",
+    "chart.js": "^2.8.0",
     "immer": "^3.1.3",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
+    "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
     "react-scripts": "3.0.1",
