--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chart.js": "^2.8.0",
     "immer": "^3.1.3",
     "node-sass": "^4.12.0",
+    "random-sentence": "^1.0.4",
     "react": "^16.8.6",
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
